# wgpu-bug

./: .gitignore  Cargo.toml
src/: main.rs  shader.wgsl
