[package]
name = "wgpu-bug"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
app-surface = "0.3.1"
bytemuck = "1.14.0"
glam = "0.24.2"
utils = { git = "https://github.com/jinleili/learn-wgpu-zh" }
wgpu = "0.17.1"
winit = "0.27.5"
